# brain-study-backend_

./: .env.example  .gitignore  deployment_check.py  pyproject.toml
alembic/: env.py
alembic/versions/: 1b7aa845dad6_create_exam_answers_table.py  43d856437cef_create_knowledge_sources_table.py  5c4f9e8d7a12_add_subject_to_knowledge_sources.py  bb69d3534d4d_add_study_material_id_to_knowledge_.py  c0f0c66f2a45_create_exam_sessions_and_questions_.py  c5082f4b5c71_create_users_table.py  e3a2ff622b00_create_study_materials_table.py  xxxxxxxx_add_subject_to_knowledge_sources.py
app/: main.py
app/ai/: __init__.py  base.py  client.py  factory.py  models.py  orchestrator.py  prompts_old.py
app/ai/analyzers/: document_analyzer.py  models.py
app/ai/core/: enums.py
app/ai/exam_engine/: models.py  objective_generator.py  objective_models.py  service.py
app/ai/extractors/: base.py  docx.py  factory.py  image.py  pdf.py  pptx.py  topic.py  txt.py
app/ai/flashcards/: models.py  service.py
app/ai/generators/: study_guide.py
app/ai/prompts/: document_analysis.py  flashcards.py  objective_exam.py  smart_study.py  study_guide.py  theory_exam.py  theory_marking.py
app/ai/providers/: base.py  factory.py  gemini.py  groq.py
app/ai/retrieval/: chunker.py  cleaner.py  embedding.py
app/ai/services/: document_extractor.py  document_processor.py  evaluation.py  exam.py  exam_generator.py  flashcard_generator.py  flashcard_review.py  flashcards.py  knowledge_builder.py  objective_generator.py  ocr.py  orchestrator.py  question_strategy.py  revision.py  smart_study.py  study_guide.py  study_guide_generator.py  teacher.py  theory_marker.py
app/ai/smart_study/: models.py  service.py
app/api/v1/: __init__.py
app/core/: config.py  dependencies.py  security.py
app/database/: __init__.py  async_session.py  base.py  models.py  session.py
app/models/: __init__.py
app/modules/auth/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
app/modules/evaluation/: models.py
app/modules/exams/: __init__.py  attachment_models.py  attachment_router.py  attachment_service.py  autosave.py  dependencies.py  events.py  exceptions.py  generator.py  grading.py  history.py  migrations_notes.md  models.py  ocr.py  ocr_router.py  register.py  repository.py  result_models.py  result_models.py.backup  review.py  review_router.py  router.py  schemas.py  service.py  submission.py  submission_models.py  timer.py  utils.py  validators.py
app/modules/knowledge_engine/: dependencies.py  models.py  repository.py  router.py  router_registration.py  schemas.py  service.py
app/modules/smart_study/: models.py  question_history_models.py  repository.py  router.py  schemas.py  service.py  session_models.py  topic_progress_models.py
app/modules/study_guide/: router.py  schemas.py  service.py
app/modules/study_materials/: __init__.py  models.py  repository.py  (+3 more)
