[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "brain-study-backend"
version = "1.0.0"
description = "Production-ready backend for Brain Study"
readme = "README.md"
requires-python = ">=3.13"

authors = [
    { name = "Brain Study Team" }
]


dependencies = [
    # API Framework
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0",

    # Database
    "sqlalchemy>=2.0.42",
    "alembic>=1.16.4",
    "psycopg2-binary>=2.9.9",

    # Validation / Configuration
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",

    # Authentication
    "python-jose[cryptography]>=3.5.0",
    "passlib[argon2]>=1.7.4",
    "argon2-cffi>=23.1.0",

    # File Uploads
    "python-multipart>=0.0.20",

    # Email validation
    "email-validator>=2.2.0",

    # Environment
    "python-dotenv>=1.1.1",

    # HTTP
    "httpx>=0.28.1",

    # Logging / Performance
    "structlog>=25.4.0",
    "orjson>=3.11.1",
    "loguru>=0.7.3",

    # AI Provider
    "groq>=0.11.0",

    # Document Processing
    "python-docx>=1.1.2",
    "pypdf>=5.0.0",
    "python-pptx>=1.0.2",
    "Pillow>=11.0.0",
    "pytesseract>=0.3.13",
]


[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "ruff>=0.12.5",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
]


[tool.setuptools]
packages = ["app"]


[tool.black]
line-length = 88
target-version = ["py313"]


[tool.ruff]
line-length = 88
target-version = "py313"


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
